tests/NormalTests/paczka1/small_fuzzy/78552976.err
Error in line 1: A801 A216 73,8
Error in line 7: A801 S488 44,9
